Feat: #104 프로젝트 일정 등록 API 문서 작성 (#116)
* Feat: 프로젝트 일정 레포지토리 생성 및 JPA 주입

* Feat: 프로젝트 일정 등록에 필요한 권한 추가

* Feat: 프로젝트 일정 등록 API 스켈레톤 코드 작성

* Test: 프로젝트 일정 테스트에 필요한 TestBuilder 클래스 추가

* Test: 프로젝트 일정 등록 API 문서 작성

* Fix: 프로젝트 상태 등록 후 반환되는 URI 경로 수정

* Refactor: 누락된 테스트 추가 및 불필요한 테스트 코드 제거
